kitty website updates

--- a/kitty/build.html
+++ b/kitty/build.html
@@ -14,9 +14,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Configuring kitty" href="conf.html" />
+    <link rel="next" title="Changelog" href="changelog.html" />
     <link rel="prev" title="kitty - the fast, featureful, GPU based, terminal emulator" href="index.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -46,11 +47,17 @@
 
 
 
+<div id="support" style="text-align: center">
+    <form class="support-form" action="support.html" title="Donate to support kitty development">
+        <input type="submit" value="Support kitty">
+    </form>
+</div>
+
 <div id="searchbox" style="display: none" role="search">
     <div class="searchformwrapper">
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" placeholder="Search" />
-      <input type="submit" value="🔍" style="cursor: pointer" />
+      <input type="submit" value="Go" style="cursor: pointer" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -71,7 +78,7 @@
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="index.html" title="previous chapter">kitty - the fast, featureful, GPU based, terminal emulator</a></li>
-      <li>Next: <a href="conf.html" title="next chapter">Configuring kitty</a></li>
+      <li>Next: <a href="changelog.html" title="next chapter">Changelog</a></li>
   </ul></li>
 </ul>
 </div>
