--- a/kitty/conf.html
+++ b/kitty/conf.html
@@ -14,10 +14,11 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Frequently Asked Questions" href="faq.html" />
-    <link rel="prev" title="Building kitty from source" href="build.html" />
+    <link rel="prev" title="Changelog" href="changelog.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -46,11 +47,17 @@
 
 
 
+<div id="support" style="text-align: center">
+    <form class="support-form" action="support.html" title="Donate to support kitty development">
+        <input type="submit" value="Support kitty">
+    </form>
+</div>
+
 <div id="searchbox" style="display: none" role="search">
     <div class="searchformwrapper">
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" placeholder="Search" />
-      <input type="submit" value="🔍" style="cursor: pointer" />
+      <input type="submit" value="Go" style="cursor: pointer" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -60,7 +67,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="build.html" title="previous chapter">Building kitty from source</a></li>
+      <li>Previous: <a href="changelog.html" title="previous chapter">Changelog</a></li>
       <li>Next: <a href="faq.html" title="next chapter">Frequently Asked Questions</a></li>
   </ul></li>
 </ul>
