--- a/kitty/graphics-protocol.html
+++ b/kitty/graphics-protocol.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Key encoding for extended keyboard protocol" href="key-encoding.html" />
@@ -46,11 +47,17 @@
 
 
 
+<div id="support" style="text-align: center">
+    <form class="support-form" action="support.html" title="Donate to support kitty development">
+        <input type="submit" value="Support kitty">
+    </form>
+</div>
+
 <div id="searchbox" style="display: none" role="search">
     <div class="searchformwrapper">
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" placeholder="Search" />
-      <input type="submit" value="🔍" style="cursor: pointer" />
+      <input type="submit" value="Go" style="cursor: pointer" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
