--- a/kitty/kittens/diff.html
+++ b/kitty/kittens/diff.html
@@ -14,10 +14,11 @@
     <script type="text/javascript" src="../_static/jquery.js"></script>
     <script type="text/javascript" src="../_static/underscore.js"></script>
     <script type="text/javascript" src="../_static/doctools.js"></script>
+    <link rel="shortcut icon" href="../_static/kitty.png"/>
     <link rel="index" title="Index" href="../genindex.html" />
     <link rel="search" title="Search" href="../search.html" />
     <link rel="next" title="Hints" href="hints.html" />
-    <link rel="prev" title="Controlling kitty from scripts or the shell" href="../remote-control.html" />
+    <link rel="prev" title="Support kitty development" href="../support.html" />
    
   <link rel="stylesheet" href="../_static/custom.css" type="text/css" />
   
@@ -46,11 +47,17 @@
 
 
 
+<div id="support" style="text-align: center">
+    <form class="support-form" action="../support.html" title="Donate to support kitty development">
+        <input type="submit" value="Support kitty">
+    </form>
+</div>
+
 <div id="searchbox" style="display: none" role="search">
     <div class="searchformwrapper">
     <form class="search" action="../search.html" method="get">
       <input type="text" name="q" placeholder="Search" />
-      <input type="submit" value="🔍" style="cursor: pointer" />
+      <input type="submit" value="Go" style="cursor: pointer" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -74,7 +81,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="../index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="../remote-control.html" title="previous chapter">Controlling kitty from scripts or the shell</a></li>
+      <li>Previous: <a href="../support.html" title="previous chapter">Support kitty development</a></li>
       <li>Next: <a href="hints.html" title="next chapter">Hints</a></li>
   </ul></li>
 </ul>
