--- a/kitty/remote-control.html
+++ b/kitty/remote-control.html
@@ -14,9 +14,10 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="kitty-diff - A side-by-side diff tool with syntax highlighting and images" href="kittens/diff.html" />
+    <link rel="next" title="Support kitty development" href="support.html" />
     <link rel="prev" title="Extensions to the xterm protocol" href="protocol-extensions.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -46,11 +47,17 @@
 
 
 
+<div id="support" style="text-align: center">
+    <form class="support-form" action="support.html" title="Donate to support kitty development">
+        <input type="submit" value="Support kitty">
+    </form>
+</div>
+
 <div id="searchbox" style="display: none" role="search">
     <div class="searchformwrapper">
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" placeholder="Search" />
-      <input type="submit" value="🔍" style="cursor: pointer" />
+      <input type="submit" value="Go" style="cursor: pointer" />
       <input type="hidden" name="check_keywords" value="yes" />
       <input type="hidden" name="area" value="default" />
     </form>
@@ -69,7 +76,7 @@
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
       <li>Previous: <a href="protocol-extensions.html" title="previous chapter">Extensions to the xterm protocol</a></li>
-      <li>Next: <a href="kittens/diff.html" title="next chapter">kitty-diff - A side-by-side diff tool with syntax highlighting and images</a></li>
+      <li>Next: <a href="support.html" title="next chapter">Support kitty development</a></li>
   </ul></li>
 </ul>
 </div>
