kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -79,8 +79,479 @@
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#Symbols"><strong>Symbols</strong></a>
+ | <a href="#K"><strong>K</strong></a>
  
 </div>
+<h2 id="Symbols">Symbols</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --all, -a
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-all">kitty-@-set-background-opacity command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-all">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --ansi
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-ansi">kitty-@-get-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --axis &lt;AXIS&gt;, -a &lt;AXIS&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-axis">kitty-@-resize-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --class &lt;CLS&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-class">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --config &lt;CONFIG&gt;, -c &lt;CONFIG&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-config">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --configured, -c
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --cwd &lt;CWD&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-cwd">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --debug-config
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-debug-config">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --debug-font-fallback
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-debug-font-fallback">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --debug-gl
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-debug-gl">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --detach
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-detach">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --directory &lt;DIRECTORY&gt;, -d &lt;DIRECTORY&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-directory">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --dump-bytes &lt;DUMP_BYTES&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-dump-bytes">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --dump-commands
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-dump-commands">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --extent &lt;EXTENT&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-extent">kitty-@-get-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --from-file &lt;FROM_FILE&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-from-file">kitty-@-send-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --increment &lt;INCREMENT&gt;, -i &lt;INCREMENT&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-increment">kitty-@-resize-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --instance-group &lt;INSTANCE_GROUP&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-instance-group">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --keep-focus
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-keep-focus">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --listen-on &lt;LISTEN_ON&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-listen-on">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --match &lt;MATCH&gt;, -m &lt;MATCH&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-close-tab-match">kitty-@-close-tab command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-close-window-match">kitty-@-close-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-focus-tab-match">kitty-@-focus-tab command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-focus-window-match">kitty-@-focus-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-match">kitty-@-get-text command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-match">kitty-@-new-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">kitty-@-resize-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-match">kitty-@-send-text command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match">kitty-@-set-background-opacity command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-match">kitty-@-set-colors command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-tab-title-match">kitty-@-set-tab-title command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-window-title-match">kitty-@-set-window-title command line option</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    --match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">kitty-@-set-background-opacity command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --name &lt;NAME&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-name">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --new-tab
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-new-tab">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --override &lt;OVERRIDE&gt;, -o &lt;OVERRIDE&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-override">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --replay-commands &lt;REPLAY_COMMANDS&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-replay-commands">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --reset
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-reset">kitty-@-set-colors command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --self
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-close-tab-self">kitty-@-close-tab command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-close-window-self">kitty-@-close-window command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-self">kitty-@-get-text command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-self">kitty-@-resize-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --session &lt;SESSION&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-session">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --single-instance, -1
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-single-instance">kitty command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --stdin
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-stdin">kitty-@-send-text command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --tab-title &lt;TAB_TITLE&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-tab-title">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --title &lt;TITLE&gt;
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-title">kitty command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-title">kitty-@-new-window command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --to &lt;TO&gt;
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-to">kitty-@ command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --version, -v
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-version">kitty command line option</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    kitty command line option
+
+      <ul>
+        <li><a href="invocation.html#cmdoption-kitty-class">--class &lt;CLS&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-config">--config &lt;CONFIG&gt;, -c &lt;CONFIG&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-debug-config">--debug-config</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-debug-font-fallback">--debug-font-fallback</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-debug-gl">--debug-gl</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-detach">--detach</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-directory">--directory &lt;DIRECTORY&gt;, -d &lt;DIRECTORY&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-dump-bytes">--dump-bytes &lt;DUMP_BYTES&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-dump-commands">--dump-commands</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-instance-group">--instance-group &lt;INSTANCE_GROUP&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-listen-on">--listen-on &lt;LISTEN_ON&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-name">--name &lt;NAME&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-override">--override &lt;OVERRIDE&gt;, -o &lt;OVERRIDE&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-replay-commands">--replay-commands &lt;REPLAY_COMMANDS&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-session">--session &lt;SESSION&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-single-instance">--single-instance, -1</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-title">--title &lt;TITLE&gt;</a>
+</li>
+        <li><a href="invocation.html#cmdoption-kitty-version">--version, -v</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@ command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-to">--to &lt;TO&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-close-tab command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-close-tab-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-close-tab-self">--self</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-close-window command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-close-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-close-window-self">--self</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-focus-tab command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-focus-tab-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-focus-window command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-focus-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-get-text command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-ansi">--ansi</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-extent">--extent &lt;EXTENT&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-get-text-self">--self</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    kitty-@-new-window command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-cwd">--cwd &lt;CWD&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-keep-focus">--keep-focus</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-new-tab">--new-tab</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-tab-title">--tab-title &lt;TAB_TITLE&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-new-window-title">--title &lt;TITLE&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-resize-window command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-axis">--axis &lt;AXIS&gt;, -a &lt;AXIS&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-increment">--increment &lt;INCREMENT&gt;, -i &lt;INCREMENT&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-resize-window-self">--self</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-send-text command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-from-file">--from-file &lt;FROM_FILE&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-send-text-stdin">--stdin</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-set-background-opacity command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-all">--all, -a</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-background-opacity-match-tab">--match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-set-colors command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-all">--all, -a</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-configured">--configured, -c</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-match-tab">--match-tab &lt;MATCH_TAB&gt;, -t &lt;MATCH_TAB&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-colors-reset">--reset</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-set-tab-title command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-tab-title-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-set-window-title command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-window-title-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
 
 
           </div>
