--- a/kitty/key-encoding.html
+++ b/kitty/key-encoding.html
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="kitty Performance" href="performance.html" />
-    <link rel="prev" title="The terminal graphics protocol" href="graphics-protocol.html" />
+    <link rel="prev" title="The kitty command line interface" href="invocation.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -67,7 +67,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="graphics-protocol.html" title="previous chapter">The terminal graphics protocol</a></li>
+      <li>Previous: <a href="invocation.html" title="previous chapter">The kitty command line interface</a></li>
       <li>Next: <a href="performance.html" title="next chapter"><em>kitty</em> Performance</a></li>
   </ul></li>
 </ul>
