kitty website updates

--- a/kitty/kittens/hints.html
+++ b/kitty/kittens/hints.html
@@ -84,7 +84,10 @@
 visible on the screen.  For example, you can press <kbd class="kbd docutils literal notranslate">ctrl+shift+e</kbd>
 to choose any URL visible on the screen and then open it using your system
 browser.</p>
-<img alt="URL hints mode" src="../_images/hints_mode.png" />
+<div class="figure align-center" id="id1">
+<a class="reference internal image-reference" href="../_images/hints_mode.png"><img alt="URL hints mode" src="../_images/hints_mode.png" style="width: 1562.0px; height: 580.0px;" /></a>
+<p class="caption"><span class="caption-text">URL hints mode</span></p>
+</div>
 <p>Similarly, you can press <kbd class="kbd docutils literal notranslate">ctrl+shift+p → f</kbd> to
 select anything that looks like a path or filename and then insert it into the
 terminal, very useful for picking files from the output of a <code class="docutils literal notranslate"><span class="pre">git</span></code> or <code class="docutils literal notranslate"><span class="pre">ls</span></code> command and
