Update main index page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello World</title>
         <meta charset="utf-8" />
+        <title>Kovid's software projects</title>
+        <!-- Google Analytics -->
+        <script>
+            window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+            ga('create', 'UA-20736318-2', 'auto');
+            ga('send', 'pageview');
+        </script>
+        <script async src='https://www.google-analytics.com/analytics.js'></script>
+        <!-- End Google Analytics -->
     </head>
     <body>
-        <h1>Hello World!</h1> 
+        <h1>Kovid's software projects</h1> 
+        <p>A collection of my software projects</p>
+        <ul>
+            <li><a href="https://calibre-ebook.com">calibre</a></li>
+            <li><a href="kitty/">kitty</a></li>
+        </ul>
     </body>
 </html>
 
