--- a/kitty/protocol-extensions.html
+++ b/kitty/protocol-extensions.html
@@ -167,7 +167,7 @@ of this protocol to enable drawing of arbitrary raster images in the terminal.</
 include:</p>
 <ul class="simple">
 <li>No way to use modifiers other than <code class="docutils literal notranslate"><span class="pre">Ctrl</span></code> and <code class="docutils literal notranslate"><span class="pre">Alt</span></code></li>
-<li>No way to use multiple modifier keys, other than, <code class="docutils literal notranslate"><span class="pre">Shift+Alt</span></code>.</li>
+<li>No way to reliably use multiple modifier keys, other than, <code class="docutils literal notranslate"><span class="pre">Shift+Alt</span></code>.</li>
 <li>No way to handle different types of keyboard events, such as press, release or repeat</li>
 <li>No reliable way to distinguish single <code class="docutils literal notranslate"><span class="pre">Esc</span></code> keypresses from the start of a
 escape sequence. Currently, client programs use fragile timing related hacks
