kitty website updates

--- a/kitty/build.html
+++ b/kitty/build.html
@@ -122,7 +122,9 @@ the following dependencies are installed first.</p>
 <div><ul class="simple">
 <li>gcc or clang</li>
 <li>pkg-config</li>
-<li>For building on Linux in addition to the above dependencies you might also need to install the <code class="docutils literal notranslate"><span class="pre">-dev</span></code> packages for <code class="docutils literal notranslate"><span class="pre">xcursor</span></code>, <code class="docutils literal notranslate"><span class="pre">xrandr</span></code>, <code class="docutils literal notranslate"><span class="pre">libxi</span></code>, <code class="docutils literal notranslate"><span class="pre">xinerama</span></code>, <code class="docutils literal notranslate"><span class="pre">libgl1-mesa</span></code> and <code class="docutils literal notranslate"><span class="pre">xkbcommon-x11</span></code>, if they are not already installed by your distro.</li>
+<li>For building on Linux in addition to the above dependencies you might also need to install the <code class="docutils literal notranslate"><span class="pre">-dev</span></code> packages for:
+<code class="docutils literal notranslate"><span class="pre">libxcursor-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxrandr-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxi-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxinerama-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libgl1-mesa-dev</span></code> and <code class="docutils literal notranslate"><span class="pre">libxkbcommon-x11-dev</span></code>,
+if they are not already installed by your distro.</li>
 </ul>
 </div></blockquote>
 </div>
