--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -355,6 +355,13 @@ ga('send', 'pageview');
 </li>
       </ul></li>
       <li>
+    --temporary
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-set-window-title-temporary">kitty-@-set-window-title command line option</a>
+</li>
+      </ul></li>
+      <li>
     --title &lt;TITLE&gt;
 
       <ul>
@@ -557,6 +564,8 @@ ga('send', 'pageview');
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-set-window-title-match">--match &lt;MATCH&gt;, -m &lt;MATCH&gt;</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-set-window-title-temporary">--temporary</a>
 </li>
       </ul></li>
   </ul></td>
