kitty website updates

--- a/kitty/index.html
+++ b/kitty/index.html
@@ -17,7 +17,7 @@
     <link rel="shortcut icon" href="_static/kitty.png"/>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="Building kitty from source" href="build.html" />
+    <link rel="next" title="kitty - Binary install" href="binary.html" />
 <!-- Google Analytics -->
 <script>
 window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -94,7 +94,7 @@ ga('send', 'pageview');
 <h3>Related Topics</h3>
 <ul>
   <li><a href="#">Documentation overview</a><ul>
-      <li>Next: <a href="build.html" title="next chapter">Building kitty from source</a></li>
+      <li>Next: <a href="binary.html" title="next chapter">kitty - Binary install</a></li>
   </ul></li>
 </ul>
 </div>
